# motion-planning

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  guild.yml  pyproject.toml  test_model.py  train_flock.py
cfg/: cloning.cfg
cluster/: build.sh  interactive.sh  run.sh  study.sh  train.sh
models/: actor_FlockingRelative-v0_cloning_k3
notebooks/: cluster_scenario.ipynb  compare-delay.ipynb  compare-encoding.ipynb  compare.ipynb  delay.ipynb  feature.ipynb  icra_plots.ipynb  journal_plots.ipynb  presentation.ipynb  scalability.ipynb  scrap.ipynb  train.ipynb  transfer.ipynb  transferability.ipynb
scripts/: baseline.py  delay.py  evaluate_policy.py  flock_test.py  generalization.py  gpg.py  main.py  plot.py  scalability.py  study.py  test-long.sh  test.ipynb  test.py  train.py  utils.py  video.py
src/gym_flock/: __init__.py
src/gym_flock/envs/flocking/: flocking_relative.py
src/gym_flock/envs/spatial/: coverage.py
src/learner/: gnn_cloning.py  state_with_delay.py
src/motion_planning/: __init__.py  main.py  rl.py  utils.py
src/motion_planning/architecture/: __init__.py  base.py  gnn.py  transformer.py
src/motion_planning/envs/: __init__.py  motion_planning.py  render_matplotlib.py  render_pygame.py
src/motion_planning/evaluate/: __init__.py  common.py  delay.py  rollout.py  scalability.py  scenarios.py
src/motion_planning/lightning/: __init__.py  base.py  ddpg.py  imitation.py  td3.py
src/motion_planning/models/: __init__.py  base.py  ddpg.py  delayed.py  gnn.py  gnndeepset.py  gpg.py  imitation.py  ppo.py  td3.py
src/motion_planning/plot/: data.py  plot.py
src/reconstrain/: __init__.py  data.py  gnn.py  gpg.py  imitation.py  main.py  models.py  rl.py  utils.py
src/reconstrain/envs/: __init__.py  motion_planning.py
src/reconstrain/models/: __init__.py  base.py  delayed.py  gpg.py  imitation.py  td3.py
test/: test_gnn.py
wandb/: settings
