[tool.poetry]
name = "motion_planning"
version = "0.1.0"
description = "Constrained reinforcement learning."
authors = ["Damian Owerko <damowerko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pytorch-lightning = "^2.0.5"
numpy = "^1.21.1"
matplotlib = "^3.8.3"
PySide6 = "^6.2.2.1"
gym = "^0.26.2"
stable-baselines3 = "^2.2.1"
scipy = "^1.8.0"
networkx = "^2.7.1"
numba = ">=0.55.1"
torchcps = {git = "https://github.com/Damowerko/torchcps"}
imageio = {extras = ["ffmpeg"], version = "^2.34.0"}
wandb = "^0.16.3"

[tool.poetry.group.dev.dependencies]
black = "^21.12-beta.0"
jupyter = "^1.0.0"
pytest = "^7.0.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.1.0+cu121.html"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"