[project]
name = "motion_planning"
version = "0.1.0"
description = "Constrained reinforcement learning."
authors = [{name="Damian Owerko", email="damowerko@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy (>=1.21.1,<2.0.0)",
    "matplotlib (>=3.8.3,<4.0.0)",
    "scipy (>=1.8.0,<2.0.0)",
    "networkx (>=2.7.1,<3.0.0)",
    "numba (>=0.55.1)",
    "torchcps @ git+https://github.com/Damowerko/torchcps",
    "imageio[ffmpeg] (>=2.34.0,<3.0.0)",
    "pyarrow (>=17.0.0,<18.0.0)",
    "scienceplots (>=2.1.1,<3.0.0)",
    "optuna (>=4.1.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "optuna-integration (>=4.1.0,<5.0.0)",
    "torchrl (==0.6.*)"
]

[tool.poetry.group.dev.dependencies]
black = "^21.12-beta.0"
jupyter = "^1.0.0"
pytest = "^7.0.0"


[tool.poetry.group.viz.dependencies]
pandas = "^2.2.1"
altair = "^5.2.0"
vl-convert-python = "^1.2.4"
seaborn = "^0.13.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.5.0+cu124.html"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"